--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.multiRootWorkspaceName": "JS_hindi"
+    "liveServer.settings.multiRootWorkspaceName": "JS_hindi",
+    "liveServer.settings.port": 5501
 }
